# relatorio_de_gastos

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml  requirements.txt  setup.sh
relatorio_de_gastos/: dashboard.py  main.py  models.py  register.py
tests/: test_relatorio_de_gastos.py
